bynkc/tests/fixtures/negative/107_int_plus_duration_withdrawn/input.bynk
commons c {
  -- ADR 0114 D5: the Int+Duration clock-math coercion is withdrawn.
  fn bad(now: Int) -> Int {
    now + 5.minutes
  }
}
